implementation of assignment workflow for students

--- a/inst/project-template/templates/site/_navbar.html
+++ b/inst/project-template/templates/site/_navbar.html
@@ -29,6 +29,6 @@
         </li>
       </ul>
     </div><!--/.nav-collapse -->
-  </div><!--/.container -->
+  </div>, <!--/.container -->
 </div><!--/.navbar -->
 
