bug fixes; API cleanup for build and publish functions.

--- a/inst/project-template/templates/site/_navbar.html
+++ b/inst/project-template/templates/site/_navbar.html
@@ -27,6 +27,11 @@
             {{/assignments}}
           </ul>
         </li>
+        {{#projects}}
+        <li>
+          <a href="projects-page.html">Projects</a>  
+        </li>
+        {{/projects}}
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
